logs/batch/batch_20260714_152240.log
[2026-07-14 15:22:40] ==================== Item 1/5 ====================
[2026-07-14 15:22:40] Task:     jiangxi_濂溪区
[2026-07-14 15:22:40] Region:   濂溪区 (市辖区) — 江西省
[2026-07-14 15:22:40] Parent:   九江市
[2026-07-14 15:22:40] Targets:  区委书记 & 区长
[2026-07-14 15:22:40] Desc:     调研濂溪区市辖区的区委书记和区长履历及工作关系网络
[2026-07-14 15:22:40] ❌ generate_build_template.py failed:   File "/workspace/data/xieming/other-codes/gov-relation/generate_build_template.py", line 80
    print(f"""#!/usr/bin/env python3
          ^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: invalid syntax. Perhaps you forgot a comma?
[2026-07-14 15:22:40] 
